fix: menu drop down was being hidden by the summit schedule

--- a/web/themes/interledger/css/styles.css
+++ b/web/themes/interledger/css/styles.css
@@ -430,7 +430,7 @@ section {
   padding: 0 var(--space-m);
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   border-block-start: 2px solid var(--color-nav-hover);
   box-shadow: var(--box-shadow);
 }
